@@ -9,8 +9,8 @@ By default, traffic statistics are stored on a five minute level for the last
 48 hours, on a hourly level for the last 4 days, on a daily level for the
 last 2 full months and on a yearly level forever. The data retention durations
 are fully user configurable. Total seen traffic and a top days listing is also
-provided. Optional png image output is available in systems with the gd library
-installed.
+provided. Optional image output is available in systems with the
+[GD library](https://libgd.github.io/) installed.
 
 See the [official webpage](https://humdi.net/vnstat/) for additional details
 and output examples.
